fix(tck): replace silent skips with strict assertions and reach 100% TCK conformance
- Migrate OfficialTckSuiteTest from assumeTrue silent skips to strict assertThat assertions
- Fix RuntimeInvocationExpression emission in JavaExpressionEmitter for function calls (date/time)
- Implement negated unary tests support, range unary tests, and list property projection in DmnJavaGenerator
- Fix OUTPUT_ORDER hit policy sorting by output domain values in DmnRuntime and DmnJavaGenerator
- Fix division-by-zero ArithmeticException handling to yield null per DMN spec
- Update CHANGELOG.md and docs/tck-conformance.md to document baseline (Skipped: 19) vs verified (Skipped: 0)