@@ -5,6 +5,6 @@ import java.util.Map;
 /** Actual named decision values produced by one TCK execution. */
 public record TckExecutionResult(String testCaseId, Map<String, Object> decisionValues) {
 	public TckExecutionResult {
-		decisionValues = Map.copyOf(decisionValues);
+		decisionValues = java.util.Collections.unmodifiableMap(new java.util.LinkedHashMap<>(decisionValues));
 	}
 }
